curriculum section added

--- a/index.html
+++ b/index.html
@@ -39,5 +39,41 @@
             <img src="./assets/hero-kids.png" alt="kid-image">
         </div>
     </section>
+
+    <section class="card-section">
+        <p class="title">Standard Curriculum</p>
+        <div class="card-list">
+            <div class="card1 card">
+                <img src="./assets/kinder.png" alt="kinder">
+                <div class="card-text">
+                    <p class="title">Kinder (3-6) Years</p>
+                    <p>Up in the sky, the birds fly high,
+                        The clouds are white, they float on by,
+                        The sun waves hello, giving warmth to try!</p>
+                </div>
+                <button class="btn1">Read More</button>
+            </div>
+            <div class="card2 card">
+                <img src="./assets/elementary.png" alt="kinder">
+                <div class="card-text">
+                    <p class="title">Elementary School</p>
+                    <p>Look at the tree, so big and tall,
+                        Its leaves will dance when breezes call,
+                        It gives us shade for one and all!</p>
+                </div>
+                <button class="btn2">Read More</button>
+            </div>
+            <div class="card3 card">
+                <img src="./assets/middle.png" alt="kinder">
+                <div class="card-text">
+                    <p class="title">Middle (10-16) Years</p>
+                    <p>Tick-tock goes the clock on the wall,
+                        Time to learn, time to play, have a ball!
+                        Kindergarten's the best of all!</p>
+                </div>
+                <button class="btn3">Read More</button>
+            </div>
+        </div>
+    </section>
 </body>
 </html>
