--- a/index.html
+++ b/index.html
@@ -74,6 +74,53 @@
                 <button class="btn3">Read More</button>
             </div>
         </div>
+        <div class="card-section-btn">
+            <div class="left-btn">
+                <i class="fa-solid fa-angle-left"></i>
+            </div>
+            <div class="right-btn">
+                <i class="fa-solid fa-angle-right"></i>
+            </div>
+        </div>
+    </section>
+    
+    <section class="our-stories-section">
+        <p class="title">Our Stories</p>
+        <div class="our-stories-card-list">
+            <div class="card-1 card">
+                <img src="./assets/story-1.png" alt="story-1">
+                <div class="card-1-text-box">
+                    <p class="title">A fun toddler coloring training on
+                        classroom</p>
+                    <p>Beautiful branding for changes by Never Now in Australia.
+                        changes is a platform for open discussion in an inclusive and
+                        collaborative environment, providing the...</p>
+                </div>
+            </div>
+            <div class="card-2 card">
+                <img src="./assets/story-2.png" alt="story-2">
+                <p>Find out if a school fits the
+                    family’s needs</p>
+            </div>
+            <div class="card-3 card">
+                <img src="./assets/story-3.png" alt="story-3">
+                <p>Summer math & literacy
+                    centres for kids</p>
+            </div>
+            <div class="card-4 card">
+                <img src="./assets/story-4.png" alt="story-4">
+                <p>Classroom management
+                    techniques for new tutors</p>
+            </div>
+            <div class="card-5 card">
+                <img src="./assets/story-5.png" alt="story-5">
+                <p>Conversation rhymes
+                    improve kids listening</p>
+                </div>
+        </div>
+        <div class="view-all-btn">
+            <button>View All</button>
+        </div>
     </section>
 </body>
 </html>
