--- a/index.html
+++ b/index.html
@@ -122,5 +122,36 @@
             <button>View All</button>
         </div>
     </section>
+    <footer>
+        <div class="footer-section">
+            <div class="footer-section-1">
+                <div class="section-1-logo">
+                    <img src="./assets/logo-2.png" alt="logo">
+                    <p class="title">Kids <br> Education</p>
+                </div>
+                <p>We sing, we play, we laugh all day,
+                    With friends around, there’s joy to stay,
+                    Kindergarten is the best, hooray!</p>
+            </div>
+            <div class="footer-section-2">
+                <p>About School</p>
+                <ul>
+                    <li><a href="#">Home</a></li>
+                    <li><a href="#">About</a></li>
+                    <li><a href="#">Facilities</a></li>
+                    <li><a href="#">Admission</a></li>
+                </ul>
+            </div>
+            <div class="footer-section-3">
+                <p>Keep In Touch</p>
+                <div class="social-media">
+                    <img src="./assets/fb.png" alt="fb">
+                    <img src="./assets/dribble.png" alt="dribble">
+                    <img src="./assets/twitter.png" alt="twitter">
+                    <img src="./assets/google+.png" alt="google+">
+                </div>
+            </div>
+        </div>
+    </footer>
 </body>
 </html>
