--- a/index.html
+++ b/index.html
@@ -153,5 +153,6 @@
             </div>
         </div>
     </footer>
+    <marquee>Admissions are now open!  Enroll today.</marquee>
 </body>
 </html>
